# CyberCadKernel

./: .gitignore  CMakeLists.txt  README.md
docs/: APP-ADOPTION-GUIDE.md  APP-MIGRATION-READINESS.md  ARCHITECTURE.md  BENCH-memory-native-vs-occt.md  BENCH-native-vs-occt.md  EVAL-numpp-scipp.md  FEATURES.md  NURBS-SCOPE.md  README.md  ROADMAP.md  STATUS-phase-0-1.md  STATUS-phase-2.md  STATUS-phase-3.md  STATUS-phase-4.md  STATUS.md  build.md  python.md
examples/: .gitignore  01_pipe_flange.py  02_l_bracket.py  03_bearing_block.py  04_v_pulley.py  05_enclosure.py  06_spur_gear_simplified.py  07_manifold_block.py  08_round_square_adapter.py  09_coolant_tube.py  10_threaded_bolt.py  11_sheet_metal_bracket.py  12_draft_housing.py  13_section_hlr_drawing.py  GALLERY.md  README.md  _gallery.py  _nurbs_gallery.py  _shapes.py  n1_lofted_bracket.py  n2_nsided_boss.py  n3_filleted_freeform_boss.py  n4_chamfer_vertex_blend.py  n5_reverse_engineered_primitive.py  n6_faired_scan_patch.py  n7_variable_swept_handle.py  n8_trim_boolean_pocket.py  n9_revolved_rational.py  run_all.py  run_all_nurbs.py
include/cybercadkernel/: cc_kernel.h  cc_kernel_nurbs.h
openspec/: DROP-OCCT-READINESS.md  L3-EXACT-NURBS-BOOLEAN-READINESS.md  MOAT-ROADMAP.md  NATIVE-REWRITE.md  NEXT-SESSION.md  ROADMAP.md  SSI-ROADMAP.md  project.md
python/: .gitignore  README.md  build_dylib.sh  pyproject.toml  setup.py
python/cybercadkernel/: __init__.py  _cffi.py  _ffi.py  _marshal.py  api.py  errors.py  kernel.py  mesh.py  nurbs.py  viz.py
python/examples/: curved_booleans.py
python/tests/: conftest.py  test_curved_boolean.py  test_engine_and_declines.py  test_ffi.py  test_full_api.py  test_geometry.py  test_lifetime_and_errors.py  test_nurbs.py  test_reference_geometry.py  test_viz.py
scratch/: m8_probe.cpp
scripts/: bench-binary-size.sh  bench-memory-native-vs-occt.sh  bench-native-vs-occt.sh  build-macos-dylib.sh  build-numsci.sh  build-tetgen.sh  build-xcframework.sh  run-host-native-ssi-marching.sh  run-host-sim-parity.sh  run-host-suite.sh  run-metal-sim.sh  run-sim-gpu-selftest.sh  run-sim-gpu-suite.sh  run-sim-harness.sh  run-sim-integ-suite.sh  run-sim-native-abi.sh  run-sim-native-analysis.sh  run-sim-native-analytic-fillet.sh  run-sim-native-blend-fuzz.sh  run-sim-native-blend.sh  run-sim-native-boolean-fuzz.sh  run-sim-native-boolean.sh  run-sim-native-chain-seam-weld.sh  run-sim-native-chain-seam.sh  run-sim-native-chamfer-face.sh  run-sim-native-construct-fuzz.sh  run-sim-native-construct-profiles.sh  run-sim-native-construct-tails.sh  run-sim-native-construct.sh  run-sim-native-curved-blend-fuzz.sh  run-sim-native-curved-boolean.sh  run-sim-native-curved-chamfer.sh  run-sim-native-curved-fillet.sh  run-sim-native-curved-offset.sh  run-sim-native-curved-shell.sh  run-sim-native-curved-wall-cut.sh  run-sim-native-dense-csg-tangent.sh  run-sim-native-directmodel-fuzz.sh  run-sim-native-display-mesh-fuzz.sh  run-sim-native-dm3-dm4.sh  (+73 more)
src/core/: compute_backend.cpp  compute_backend.h  guard.cpp  guard.h  result.h  scheduler.cpp  scheduler.h  shape_provenance.cpp  shape_provenance.h  shape_registry.cpp  shape_registry.h
src/engine/: IEngine.h  engine_registry.cpp
src/facade/: cc_kernel.cpp  cc_kernel_nurbs.cpp  cc_nurbs_blend_offset.cpp  cc_nurbs_boolean.cpp  cc_nurbs_boolean_ext.cpp  cc_nurbs_fit.cpp  cc_nurbs_surfacing.cpp  cc_nurbs_topo.cpp
tests/: harness.h  test_abi.cpp  test_cc_nurbs.cpp  test_cc_nurbs_blend_offset.cpp  test_cc_nurbs_boolean.cpp  test_cc_nurbs_boolean_ext.cpp  test_cc_nurbs_fit.cpp  test_cc_nurbs_sizeof.c  test_cc_nurbs_surfacing.cpp  test_cc_nurbs_topo.cpp  test_cc_nurbs_topo_sizeof.c  test_compute_backend.cpp  test_cross_engine_guard.cpp  test_guard.cpp  test_native_engine.cpp  test_native_math.cpp  test_parallel_policy.cpp  test_parallel_toggle.cpp  test_registry.cpp  test_scheduler.cpp
tests/native/: chain_seam_fixture.h  curved_wall_cut_fixture.h  face_split_fixture.h  first_freeform_boolean_breadth_fixture.h  first_freeform_boolean_fixture.h  freeform_freeform_cut_fixture.h  freeform_freeform_multiseam_fixture.h  freeform_multiseam_asym_fixture.h  measure_multiseam_asym.cpp  measure_multiseam_fine.cpp  measure_multiseam_vote.cpp  measure_shared_strip.cpp  multi_seam_fixture.h  nurbs_curved_split_fixture.h  nurbs_freeform_split_fixture.h  nurbs_plane_split_fixture.h  oracle_graze_threeway.cpp  replay_freeform_seed.cpp  slab_disjoint_cut_fixture.h  smooth_trim_split_fixture.h  test_native_analysis.cpp  test_native_analysis_facade.cpp  test_native_analytic_fillet.cpp  test_native_analytic_nurbs.cpp  test_native_blend.cpp  test_native_boolean.cpp  test_native_boolean_readmit.cpp  test_native_bspline_intersect.cpp  test_native_chain_seam.cpp  test_native_chamfer_edge_nurbs.cpp  test_native_chamfer_edge_variable_freeform.cpp  test_native_chamfer_face.cpp  test_native_construct.cpp  test_native_corner_chamfer.cpp  test_native_curved_boolean.cpp  test_native_curved_shell.cpp  test_native_curved_wall_cut.cpp  test_native_dense_csg_stress.cpp  test_native_display_mesh.cpp  test_native_display_mesh_fuzz.cpp  (+102 more)
tests/sim/: checks.h  checks_accel.cpp  checks_booltransform.cpp  checks_construct.cpp  checks_exchange.cpp  checks_feature.cpp  checks_full_round_fillet.cpp  checks_g2_fillet.cpp  checks_query.cpp  checks_reference_geometry.cpp  checks_tessellate.cpp  checks_thread_boolean.cpp  checks_wrap_emboss.cpp  full_suite.cpp  gpu_check.h  gpu_pick_check.mm  gpu_suite.mm  integ_gpu_tess.cpp  metal_selftest.cpp  native_abi_parity.mm  native_analysis_parity.mm  native_analytic_fillet_parity.mm  native_blend_fuzz.mm  native_blend_parity.mm  native_boolean_fuzz.mm  native_boolean_parity.mm  native_chain_seam_parity.mm  native_chain_seam_weld_parity.mm  native_chamfer_face_parity.mm  native_construct_fuzz.mm  native_construct_parity.mm  native_construct_profiles_parity.mm  native_construct_tails_parity.mm  native_curved_blend_fuzz.mm  native_curved_boolean_parity.mm  native_curved_chamfer_parity.mm  native_curved_fillet_parity.mm  native_curved_offset_parity.mm  (+78 more)
(+1146 files in other folders)
